[GH-107] Include new entity label generated by LLM in sorting results.
This is a temporary workaround until LLM-based new entity labels are properly implemented.